--- a/src/app/requests/components/requests/requests.component.css
+++ b/src/app/requests/components/requests/requests.component.css
@@ -1,4 +1,4 @@
-.user-list {
+.requests-list {
     width: 100%;
     height: calc(100vh - 98px);
     padding: 30px 0;
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.user-list table {
+.requests-list table {
     width: 90%;
     border-collapse: collapse;
     border-spacing: 0;
@@ -19,6 +19,9 @@ th, td {
     padding: 10px;
     text-align: left;
     border: 1px solid #ddd;
+    max-width: 400px;
+    overflow-y: auto;
+    word-wrap: break-word;
 }
 
 thead th {
@@ -31,4 +34,16 @@ thead th {
     color: var(--primary-color);
     text-align: center;
     width: 90%;
+}
+
+.actions_table {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.table-button {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    text-align: center;
 }
