Implement Albums page with album listing by user id

--- a/src/app/layout/components/topbar/topbar.component.html
+++ b/src/app/layout/components/topbar/topbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
     <div class="button" (click)="navigateHome()">Home</div>
     <div class="button" (click)="navigateRequestsPage()">Registro de petición</div>
-    <div class="button">Registro de consulta de álbumes</div>
+    <div class="button" (click)="navigateAlbumsPage()">Registro de consulta de álbumes</div>
 </nav>
