--- a/src/app/requests/components/delete-request/delete-request.component.css
+++ b/src/app/requests/components/delete-request/delete-request.component.css
@@ -7,6 +7,15 @@
     color: var(--secondary-color);
 }
 
+.delete-request p {
+    margin: 10px 0;
+}
+
+.delete-request div {
+    display: flex;
+    gap: 10px;
+}
+
 .delete-request button {
     border: 0;
     background-color: var(--secondary-color);
