Implement error handling in 'get albums by user ID' feature

--- a/src/app/albums/components/albums/albums.component.html
+++ b/src/app/albums/components/albums/albums.component.html
@@ -3,7 +3,7 @@
         <input type="text" placeholder="id de usuario" [(ngModel)]="userId">
         <button class="button" (click)="search()">Buscar</button>
     </div>
-    @if (albums) {
+    @if (albums && albums.length > 0) {
         <table>
             <thead>
                 <tr>
